2007-11-13  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-chandler.c:
	* libempathy/empathy-filter.c: Do not use deprecated tp_conn_new(), use
	tp_conn_new_without_connect() instead.

2007-11-12  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.21.3.

2007-11-12  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-status-icon.c:
	* src/empathy-call-chandler.c:
	* src/empathy-call.chandler:
	* src/org.gnome.Empathy.Call.service.in:
	* src/empathy-chat.chandler:
	* src/org.gnome.Empathy.Chat.service.in:
	* src/empathy-chat-chandler.c: Don't use the same bus name for filter
	and chandler programs.

2007-11-12  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-jabber.glade: Jabber priority is
	in the range -128 127 (Laurent Bigonville).

2007-11-11  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-chat.c:
	* src/empathy-call-chandler.c:
	* src/org.gnome.Empathy.Chat.service.in:
	* src/empathy-chat-chandler.c:
	* src/empathy.c:
	* src/Makefile.am: Move chats to its own process.

2007-11-07  Xavier Claessens  <xclaesse@gmail.com>

	* src/org.gnome.Empathy.Call.service.in:
	* src/Makefile.am: Install empathy-call-chandler to $libexecdir.

2007-11-06  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-jabber.glade:
	* libempathy-gtk/empathy-account-widget-jabber.c: Allow to change jabber
	priority. Fixes bug #493992 (Laurent Bigonville).

2007-11-04  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.c: Display error message when an
	account failed to connect. Based on Gossip's code.

2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-contact-factory.c: Call ClearAvatar if the data
	is NULL or size <= 0 in empathy_contact_factory_set_avatar().

2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-widget.c:
	* libempathy-gtk/empathy-avatar-chooser.c: